# cosmic-initial-setup

./: .gitattributes  .gitignore  Cargo.toml  README.md  cargo.just  configure.py  flake.nix  justfile
debian/: 99cosmic-initial-setup-casper  changelog  control  copyright  cosmic-initial-setup-casper.install  cosmic-initial-setup.postinst  cosmic-initial-setup.postrm  rules
geonames/: Cargo.toml
geonames/src/: lib.rs  main.rs
i18n/ar/: cosmic_initial_setup.ftl
i18n/be/: cosmic_initial_setup.ftl
i18n/bg/: cosmic_initial_setup.ftl
i18n/ca/: cosmic_initial_setup.ftl
i18n/cs/: cosmic_initial_setup.ftl
i18n/de/: cosmic_initial_setup.ftl
i18n/el/: cosmic_initial_setup.ftl
i18n/en/: cosmic_initial_setup.ftl
i18n/en-GB/: cosmic_initial_setup.ftl
i18n/es-419/: cosmic_initial_setup.ftl
i18n/es-ES/: cosmic_initial_setup.ftl
i18n/es-MX/: cosmic_initial_setup.ftl
i18n/et/: cosmic_initial_setup.ftl
i18n/fi/: cosmic_initial_setup.ftl
i18n/fr/: cosmic_initial_setup.ftl
i18n/ga/: cosmic_initial_setup.ftl
i18n/he/: cosmic_initial_setup.ftl
i18n/hi/: cosmic_initial_setup.ftl
i18n/hu/: cosmic_initial_setup.ftl
i18n/id/: cosmic_initial_setup.ftl
i18n/is/: cosmic_initial_setup.ftl
i18n/it/: cosmic_initial_setup.ftl
i18n/ja/: cosmic_initial_setup.ftl
i18n/kab/: cosmic_initial_setup.ftl
i18n/kk/: cosmic_initial_setup.ftl
i18n/ko/: cosmic_initial_setup.ftl
i18n/lt/: cosmic_initial_setup.ftl
i18n/nb-NO/: cosmic_initial_setup.ftl
i18n/nl/: cosmic_initial_setup.ftl
i18n/nn/: cosmic_initial_setup.ftl
i18n/oc/: cosmic_initial_setup.ftl
i18n/pa/: cosmic_initial_setup.ftl
i18n/pl/: cosmic_initial_setup.ftl
i18n/pt/: cosmic_initial_setup.ftl
i18n/pt-BR/: cosmic_initial_setup.ftl
i18n/ru/: cosmic_initial_setup.ftl
i18n/sr/: cosmic_initial_setup.ftl
i18n/sr-Cyrl/: cosmic_initial_setup.ftl
i18n/sr-Latn/: cosmic_initial_setup.ftl
i18n/sv/: cosmic_initial_setup.ftl
i18n/tr/: cosmic_initial_setup.ftl
i18n/uk/: cosmic_initial_setup.ftl
i18n/vi/: cosmic_initial_setup.ftl
i18n/zh-CN/: cosmic_initial_setup.ftl
i18n/zh-Hant/: cosmic_initial_setup.ftl
i18n/zh-TW/: cosmic_initial_setup.ftl
nl/: i18ncosmic_initial_setup.ftl
res/: 20-cosmic-initial-setup.rules  cities.bitcode-v0-6  com.system76.CosmicInitialSetup.Autostart.desktop  com.system76.CosmicInitialSetup.desktop
res/layouts/bottom-panel/: layout.kdl
res/layouts/top-panel-and-bottom-dock/: layout.kdl
res/themes/: comet-light.ron  cream-light.ron  mocha-dark.ron  nebula-dark.ron
src/: accessibility.rs  greeter.rs  localize.rs  main.rs
src/page/: a11y.rs  appearance.rs  keyboard.rs  language.rs  launcher.rs  layout.rs  location.rs  mod.rs  new_apps.rs  new_shortcuts.rs  user.rs  welcome.rs  wifi.rs  workflow.rs
