[package]
name = "cosmic-initial-setup"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols" }
crabtime = "1.1.3"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
geonames = { path = "geonames" }
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }
heck = "0.5.0"
# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
indexmap = "2.11.3"
itoa = "1.0.15"
kdl = "6.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
pwd = "1.4.0"
pwhash = "1.0.0"
regex = "1"
ron = "0.11"
rust-embed = "8"
secure-string = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = "1.0.7"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
xkb-data = "0.2.1"
zbus = "5"
zbus_polkit = "5.0.0"

[dependencies.accounts-zbus]
git = "https://github.com/pop-os/dbus-settings-bindings"

[dependencies.cosmic-comp-config]
git = "https://github.com/pop-os/cosmic-comp"

[dependencies.cosmic-randr-shell]
git = "https://github.com/pop-os/cosmic-randr"

[dependencies.cosmic-settings-subscriptions]
git = "https://github.com/pop-os/cosmic-settings-subscriptions"
default-features = false
features = ["accessibility", "network_manager"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "single-instance", "tokio", "winit", "xdg-portal"]

[dependencies.locale1]
git = "https://github.com/pop-os/dbus-settings-bindings"

[dependencies.locales-rs]
git = "https://github.com/AerynOS/locales-rs"

[dependencies.sctk]
version = "0.20.0"
package = "smithay-client-toolkit"

[features]
default = ["a11y", "wgpu"]
a11y = ["libcosmic/a11y"]
nixos = []
wgpu = ["libcosmic/wgpu"]

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release]
lto = "thin"

[workspace]
members = ["geonames"]

[patch.'https://github.com/pop-os/cosmic-protocols']
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//" }

# [patch.'https://github.com/pop-os/libcosmic.git']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
